--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -14,7 +14,7 @@
 
 				<div>
 
-			  		Employee ID:<br> {{ id }} <br><br>
+			  		Employee ID:<br> {{ eid }} <br><br>
 
 			  		First Name:<br> {{ fname }} <br><br>
 
