--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<center>
-	<font color="DodgerBlue" size="5" style="font-family: avenir">
-		<body bgcolor="lightgrey">
-			<h1>SAVE SUCCESSFUL</h1><br>
-			<h2>Following Employee has been added to the database</h2><br>
-			<h2>{{ name }}</h2><br>
-			<title>Add Emp Output</title>
-				<form action="/" autocomplete="on" method = "GET">
-
-					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
-
-				</form>
-		</body>
-	</font>
-</center>
+	<title>Add Emp Output</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div class="shadow">
+		<div class="add_emp_area add_emp_out">
+			<h1>SAVE SUCCESSFUL</h1>
+			<h2>Following Employee has been added to the database</h2>
+			<h3>{{ name }}</h3>
+			
 
+				<form action="/" autocomplete="on" method = "GET">
+					<!-- <input type="submit" value="GO BACK"> -->
+					<button type="submit" class="glow-on-hover">GO BACK</button>
+				</form>
+		</div>
+	</div>
+		
+		
+	
 </body>
 </html>
-
