--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Add Emp Output</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
 	<div class="shadow">
