--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Get Employee Information</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/static/style.css">
 </head>
 
 		<body>
