--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -22,8 +22,8 @@
 							<input type="date" name = "birth_date">
 							<label for="">Gender</label>
 							<div class="gender">
-								Male:<input type="radio" name="gender">
-							Female:<input type="radio" name="gender">
+								Male:<input type="radio" name="gender" value = "male">
+							Female:<input type="radio" name="gender" value = "female">
 							</div>
 							<label for="">Email Address:</label>
 							<input type="email" name ="email">
