--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Add Employee Information</title>
+	<title>HJ company - Add Employee Information</title>
 	<link rel="stylesheet" href="/static/style.css">
 </head>
 		<body>
