--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -37,7 +37,8 @@
 							<input type="text" name = "job">
 							<label for="">Employment Start Date:</label>
 							<input type="date" name = "date">
-						 
+						 	<label for="">Salary</label>
+							<input type="text" name = "salary">
 			
 							<br><br>
 							<!-- <input type="submit" value="UPDATE DATABASE"> -->
