--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Add Emp Output</title>
+	<title>HJ company - Add Emp Output</title>
 <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
