--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>Get Employee Information</title>
+	<title>HJ company - Get Employee Information</title>
 	<link rel="stylesheet" href="/static/style.css">
 </head>
 
