--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Employee Information</title>
+	<title>HJ company - Employee Information</title>
 	<link rel="stylesheet" href="/static/style.css">
 </head>
 		<body>
@@ -57,6 +57,10 @@
 								<tr>
 									<td>Employment Start Date:</td>
 									<td>{{ Employment_Start }}</td>
+								</tr>
+								<tr>
+									<td>Salary:</td>
+									<td>{{ salary }}</td>
 								</tr>
 								 
 							</table>
