--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -45,7 +45,8 @@
 							  
 							<button type="submit" class="glow-on-hover">UPDATE DATABASE</button>
 						</form>
-						<a class="learn_btn" href="/about">About Us</a>
+						<a class="learn_btn" href="/aboutKJJ">About Us</a>
+						<a class="learn_btn" href="/aboutHR">About Us</a>
 						
 					</div>
 				</div>
