--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -45,8 +45,9 @@
 							  
 							<button type="submit" class="glow-on-hover">UPDATE DATABASE</button>
 						</form>
-						<a class="learn_btn" href="/aboutKJJ">About Us</a>
-						<a class="learn_btn" href="/aboutHR">About Us</a>
+						
+						<a class="learn_btn" href="/aboutKJJ">Developer(KJJ)</a>
+						<a class="learn_btn" href="/aboutHR">Developer(HR)</a>
 						
 					</div>
 				</div>
